syntax = "proto3";

package configs;

import "runtime/middleware/v1/cors/cors.proto";
import "runtime/service/v1/service.proto";
import "runtime/storage/v1/storage.proto";

option go_package = "github.com/origadmin/basic-layout/internal/configs;configs";

// ServiceConfig is the configuration structure for the service.
// It uses the runtime service definitions for server and client configurations.
message ServiceConfig {
  // Service configuration from the runtime service package.
  runtime.service.v1.Service service = 1;

  // CORS configuration for HTTP servers.
  runtime.middleware.v1.cors.Cors cors = 2;

  // Storage configuration for the service.
  runtime.storage.v1.Storage data = 3;
}